crates/cribo/tests/snapshots/test_bundling_snapshots__execution_results@stickytape_script_with_dynamic_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<TMP>/bundled.py\", line 10, in <module>\n    greeting = importlib.import_module(\"greeting\")\n  File \"<PYTHON_LIB>/importlib/__init__.py\", line <LINE>, in import_module\n    return _bootstrap._gcd_import(name[level:], package, level)\n  File \"<frozen importlib._bootstrap>\", line 1387, in _gcd_import\n  File \"<frozen importlib._bootstrap>\", line 1360, in _find_and_load\n  File \"<frozen importlib._bootstrap>\", line 1324, in _find_and_load_unlocked\nModuleNotFoundError: No module named 'greeting'",
}
