crates/cribo/tests/snapshots/test_bundling_snapshots__execution_results@stickytape_script_with_special_shebang.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
ExecutionResults {
    status: Success,
    stdout: "0",
    stderr: "",
}
