crates/cribo/tests/snapshots/test_bundling_snapshots__execution_results@stickytape_single_file_using_stdlib.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
ExecutionResults {
    status: Success,
    stdout: "f7ff9e8b7bb2e09b70935a5d785e0cc5d9d0abf0",
    stderr: "",
}
