crates/cribo/tests/snapshots/test_bundling_snapshots__ruff_lint_results@all_variable_handling.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [],
    total_violations: 0,
}
