crates/cribo/tests/snapshots/test_bundling_snapshots__ruff_lint_results@late_future_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
RuffLintResults {
    f401_violations: [
        "Line 7: F401 - `os` imported but unused",
        "Line 9: F401 - `sys` imported but unused",
    ],
    f404_violations: [],
    other_violations: [],
    total_violations: 2,
}
